# rust-web-server-template

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
src/: config.rs
