[package]
name = "rust-web-server-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive", "env"] }
